tests/sources/invalid/classes/field_access_missing_identifier.fire
// Field access with nothing after the '.': fails both at the low-level
// primary-expression parser (unexpected token) and at the statement
// dispatch level (no assignment follows the incomplete field access).
class Holder {
    v: int32;

    fn Holder(v: int32) {
        this.v = v;
    }
}

fn main() -> int32 {
    h: Holder = Holder(1);
    h.;  //~ ERROR FS-PARSE-0010 @7
//~^ ERROR FS-PARSE-0010 @7
    return 0;
}
